--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <header>
-
+        <nav>
+            <img src="./img/logo.png" alt="Logo Orinoco">
+        </nav>
     </header>
     
     <main>
