--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,12 +6,15 @@
     <title>Orinoco</title>
 
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" rel="stylesheet">
+
 </head>
 
 <body>
     <header>
         <nav>
             <img src="./img/logo.png" alt="Logo Orinoco">
+            <a href="#"><i class="fas fa-2x fa-shopping-bag">0</i></a>   
         </nav>
     </header>
     
