--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <img src="./img/logo.png" alt="Logo Orinoco">
+            <a href="#"><img src="./img/logo.png" alt="Logo Orinoco"></a>
             <a href="#"><i class="fas fa-2x fa-shopping-bag">0</i></a>   
         </nav>
     </header>
