--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -23,7 +23,7 @@
     </main>
 
     <footer>
-
+        <a href="#"><img src="./img/logo.png" alt="Logo Orinoco"></a>
     </footer>
 
     <script src="js/index.js"></script>
