--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -19,7 +19,9 @@
     </header>
     
     <main>
-
+        <div class="container">
+            <h1>Orinoco - Tous les Produits </h1>
+        </div>
     </main>
 
     <footer>
