--- a/Frontend/pages/produit.html
+++ b/Frontend/pages/produit.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orinoco</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" rel="stylesheet">
 
 </head>
@@ -13,23 +13,21 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="./img/logo.png" alt="Logo Orinoco"></a>
+            <a href="../index.html"><img src="../img/logo.png" alt="Logo Orinoco"></a>
             <a href="#"><i class="fas fa-2x fa-shopping-bag">0</i></a>   
         </nav>
     </header>
     
     <main>
-        
         <div class="container">
-            <h1>Orinoco - Tous les Produits </h1>
         </div>
     </main>
 
     <footer>
-        <a href="#"><img src="./img/logo.png" alt="Logo Orinoco"></a>
+        <a href="#"><img src="../img/logo.png" alt="Logo Orinoco"></a>
     </footer>
 
-    <script src="js/index.js"></script>
+    <script src="js/produit.js"></script>
 </body>
 
 </html>
