adding id to li tag

--- a/Frontend/pages/produit.html
+++ b/Frontend/pages/produit.html
@@ -27,7 +27,7 @@
         <a href="#"><img src="../img/logo.png" alt="Logo Orinoco"></a>
     </footer>
 
-    <script src="js/produit.js"></script>
+    <script src="../js/produit.js"></script>
 </body>
 
 </html>
