creation of getBasketNb to know how many teddies they are in basket

--- a/Frontend/pages/produit.html
+++ b/Frontend/pages/produit.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <a href="../index.html"><img src="../img/logo.png" alt="Logo Orinoco"></a>
-            <a href="#"><i class="fas fa-2x fa-shopping-bag">0</i></a>   
+            <a href="#"><i class="fas fa-2x fa-shopping-bag"></i></a>   
         </nav>
     </header>
     
