--- a/Frontend/pages/produit.html
+++ b/Frontend/pages/produit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orinoco</title>
+    <title>Orinoco - Produit</title>
 
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" rel="stylesheet">
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <a href="../index.html"><img src="../img/logo.png" alt="Logo Orinoco"></a>
-            <a href="#"><i class="fas fa-2x fa-shopping-bag"></i></a>   
+            <a href="./panier.html"><i class="fas fa-2x fa-shopping-bag"></i></a>   
         </nav>
     </header>
     
@@ -26,7 +26,7 @@
     </main>
 
     <footer>
-        <a href="#"><img src="../img/logo.png" alt="Logo Orinoco"></a>
+        <a href="../index.html"><img src="../img/logo.png" alt="Logo Orinoco"></a>
     </footer>
 
     <script src="../js/produit.js"></script>
