--- a/Frontend/pages/panier.html
+++ b/Frontend/pages/panier.html
@@ -20,7 +20,7 @@
     </header>
     
     <main>
-        <div class="container2">
+        <div class="container">
             
         </div>
     </main>
