changing submit button textcontent value in 'panier.html'

--- a/Frontend/pages/panier.html
+++ b/Frontend/pages/panier.html
@@ -54,9 +54,9 @@
                             <input type="text" class="form-control" id="city" required>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Sign in</button>
+                    <button type="submit" class="btn btn-primary">Commander</button>
                   </form>  
-                  
+
             </div>
         </section>
     </main>
