--- a/Frontend/pages/panier.html
+++ b/Frontend/pages/panier.html
@@ -46,7 +46,7 @@
                       </div>
                     <div class="form-row">
                         <div class="form-group col-md-9">
-                            <label for="address">Addresse</label>
+                            <label for="address">Adresse</label>
                             <input type="text" class="form-control" id="Address" placeholder="1234 Main St" required>
                           </div>
                         <div class="form-group col-md-3">
@@ -55,7 +55,7 @@
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary">Commander</button>
-                  </form>  
+                </form>  
 
             </div>
         </section>
