--- a/Frontend/pages/panier.html
+++ b/Frontend/pages/panier.html
@@ -33,25 +33,25 @@
                     <div class="form-row">
                       <div class="form-group col-md-6">
                         <label for="firstname">Prénom</label>
-                        <input type="text" class="form-control" id="firstname" required>
+                        <input type="text" class="form-control" id="firstname" required pattern="[A-Za-z]{2,}">
                       </div>
                       <div class="form-group col-md-6">
                         <label for="lastname">Nom</label>
-                        <input type="text" class="form-control" id="lastname" required>
+                        <input type="text" class="form-control" id="lastname" required pattern="[A-Za-z]{2,}">
                       </div>
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" required>
+                        <input type="email" class="form-control" id="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
                       </div>
                     <div class="form-row">
                         <div class="form-group col-md-9">
                             <label for="address">Adresse</label>
-                            <input type="text" class="form-control" id="Address" placeholder="1234 Main St" required>
+                            <input type="text" class="form-control" id="address" placeholder="1234 Main St" required pattern="[0-9]+ [A-Za-z ]+">
                           </div>
                         <div class="form-group col-md-3">
                             <label for="city">Ville</label>
-                            <input type="text" class="form-control" id="city" required>
+                            <input type="text" class="form-control" id="city" required pattern="[A-Za-z ]{2,}">
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary">Commander</button>
