--- a/Frontend/pages/panier.html
+++ b/Frontend/pages/panier.html
@@ -31,19 +31,19 @@
                 <h2 class="text-center">Formulaire de commande</h2>
                 <form>
                     <div class="form-row">
-                      <div class="form-group col-md-6">
-                        <label for="firstname">Prénom</label>
-                        <input type="text" class="form-control" id="firstname" required pattern="[A-Za-z]{2,}">
-                      </div>
-                      <div class="form-group col-md-6">
-                        <label for="lastname">Nom</label>
-                        <input type="text" class="form-control" id="lastname" required pattern="[A-Za-z]{2,}">
-                      </div>
+                        <div class="form-group col-md-6">
+                            <label for="firstname">Prénom</label>
+                            <input type="text" class="form-control" id="firstname" required pattern="[A-Za-z]{2,}">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="lastname">Nom</label>
+                            <input type="text" class="form-control" id="lastname" required pattern="[A-Za-z]{2,}">
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
-                      </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" class="form-control" id="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+                        </div>
                     <div class="form-row">
                         <div class="form-group col-md-9">
                             <label for="address">Adresse</label>
@@ -54,7 +54,7 @@
                             <input type="text" class="form-control" id="city" required pattern="[A-Za-z ]{2,}">
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Commander</button>
+                    <button id="orderingButton" type="submit" class="btn btn-primary">Commander</button>
                 </form>  
 
             </div>
