--- a/Frontend/pages/panier.html
+++ b/Frontend/pages/panier.html
@@ -47,7 +47,7 @@
                     <div class="form-row">
                         <div class="form-group col-md-9">
                             <label for="address">Adresse</label>
-                            <input type="text" class="form-control" id="address" placeholder="1234 Main St" required pattern="[0-9]+ [A-Za-z ]+">
+                            <input type="text" class="form-control" id="address" placeholder="1234 Main St" required pattern="[A-Za-z0-9 ]+">
                           </div>
                         <div class="form-group col-md-3">
                             <label for="city">Ville</label>
