--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -30,7 +30,7 @@
     <footer>
         <a href="#"><img src="./img/logo.png" alt="Logo Orinoco"></a>
     </footer>
-
+    <script src="js/functions.js"></script>
     <script src="js/index.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
