--- a/Frontend/pages/panier.html
+++ b/Frontend/pages/panier.html
@@ -64,7 +64,8 @@
     <footer>
         <a href="../index.html"><img src="../img/logo.png" alt="Logo Orinoco"></a>
     </footer>
-
+    
+    <script src="../js/functions.js"></script>
     <script src="../js/panier.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
