--- a/Frontend/pages/produit.html
+++ b/Frontend/pages/produit.html
@@ -29,6 +29,7 @@
         <a href="../index.html"><img src="../img/logo.png" alt="Logo Orinoco"></a>
     </footer>
 
+    <script src="../js/functions.js"></script>
     <script src="../js/produit.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
